# autoware_rosbag2_anonymizer

./: .gitignore  README.md  main.py  pyproject.toml  validation.json
autoware_rosbag2_anonymizer/: __init__.py  common.py
autoware_rosbag2_anonymizer/model/: grounding_dino.py  open_clip.py  sam2.py  unified_language_model.py  yolo.py  yolov8.py
autoware_rosbag2_anonymizer/rosbag_io/: rosbag_common.py  rosbag_reader.py  rosbag_writer.py
autoware_rosbag2_anonymizer/tools/: anonymize_with_unified_model.py  validator.py  yolo_anonymize.py  yolo_create_dataset.py  yolo_train.py
config/: anonymize_with_unified_model.yaml  validation.yaml  yolo_anonymize.yaml  yolo_create_dataset.yaml  yolo_train.yaml
docs/: time_and_requirent_analysis.md  train-your-own-yolo-model.md  validation.md
