[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["autoware_rosbag2_anonymizer"]  # package names should match these glob patterns (["*"] by default)
exclude = []  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[project]
name = "autoware_rosbag2_anonymizer"
version = "0.1.0"
dependencies = [
  "cv_bridge",
  "huggingface_hub",
  "numpy",
  "opencv_python",
  "Pillow",
  "PyYAML",
  "segment_anything",
  "supervision>0.18.0",
  "torch",
  "torchvision",
  "open_clip_torch",
  "ultralytics",
  "groundingdino-py @ git+https://github.com/leo-drive/GroundingDINO.git@main",
  "sam-2 @ git+https://github.com/facebookresearch/segment-anything-2.git",
]
requires-python = ">= 3.8"
authors = [
  {name = "Barış Zeren", email = "baris@leodrive.ai"},
]
maintainers = [
  {name = "Barış Zeren", email = "baris@leodrive.ai"}
]
description = "A Python project to anonymize the ROS 2 bag files."
readme = {file = "README.md", content-type = "text/markdown"}

[project.urls]
Documentation = "https://github.com/autowarefoundation/autoware_rosbag2_anonymizer/blob/main/README.md"
Repository = "https://github.com/autowarefoundation/autoware_rosbag2_anonymizer"
Issues = "https://github.com/orgs/autowarefoundation/discussions"

[project.scripts]
autoware-rosbag2-anonymizer-split-dataset = 'autoware_rosbag2_anonymizer.common:split_dataset'